// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NamespaceMemberFormDialog Dialog create user administrator Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" class="mr-2 v-btn v-btn--outlined theme--light v-size--default" data-test="add-btn"><span class="v-btn__content">
          Add Member
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`NamespaceMemberFormDialog Dialog create user observer Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" disabled="disabled" class="mr-2 v-btn v-btn--disabled v-btn--outlined theme--light v-size--default" data-test="add-btn"><span class="v-btn__content">
          Add Member
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`NamespaceMemberFormDialog Dialog create user operator Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" disabled="disabled" class="mr-2 v-btn v-btn--disabled v-btn--outlined theme--light v-size--default" data-test="add-btn"><span class="v-btn__content">
          Add Member
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`NamespaceMemberFormDialog Dialog create user owner Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" class="mr-2 v-btn v-btn--outlined theme--light v-size--default" data-test="add-btn"><span class="v-btn__content">
          Add Member
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`NamespaceMemberFormDialog Dialog edit user administrator Renders the component 1`] = `
<fragment-stub><span><div data-test="edit-list" class="v-list-item__title">
          Edit
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="edit-icon" class="v-icon notranslate v-icon--left mdi mdi-pencil theme--light"></i></span>
  <div role="dialog" class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`NamespaceMemberFormDialog Dialog edit user observer Renders the component 1`] = `
<fragment-stub><span><div data-test="edit-list" class="v-list-item__title">
          Edit
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="edit-icon" class="v-icon notranslate v-icon--disabled v-icon--left mdi mdi-pencil theme--light"></i></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`NamespaceMemberFormDialog Dialog edit user operator Renders the component 1`] = `
<fragment-stub><span><div data-test="edit-list" class="v-list-item__title">
          Edit
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="edit-icon" class="v-icon notranslate v-icon--disabled v-icon--left mdi mdi-pencil theme--light"></i></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`NamespaceMemberFormDialog Dialog edit user owner Renders the component 1`] = `
<fragment-stub><span><div data-test="edit-list" class="v-list-item__title">
          Edit
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="edit-icon" class="v-icon notranslate v-icon--left mdi mdi-pencil theme--light"></i></span>
  <div role="dialog" class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`NamespaceMemberFormDialog Icon add user administrator Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" class="mr-2 v-btn v-btn--outlined theme--light v-size--default" data-test="add-btn"><span class="v-btn__content">
          Add Member
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`NamespaceMemberFormDialog Icon add user observer Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" disabled="disabled" class="mr-2 v-btn v-btn--disabled v-btn--outlined theme--light v-size--default" data-test="add-btn"><span class="v-btn__content">
          Add Member
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`NamespaceMemberFormDialog Icon add user operator Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" disabled="disabled" class="mr-2 v-btn v-btn--disabled v-btn--outlined theme--light v-size--default" data-test="add-btn"><span class="v-btn__content">
          Add Member
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`NamespaceMemberFormDialog Icon add user owner Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" class="mr-2 v-btn v-btn--outlined theme--light v-size--default" data-test="add-btn"><span class="v-btn__content">
          Add Member
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`NamespaceMemberFormDialog Icon edit user administrator Renders the component 1`] = `
<fragment-stub><span><div data-test="edit-list" class="v-list-item__title">
          Edit
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="edit-icon" class="v-icon notranslate v-icon--left mdi mdi-pencil theme--light"></i></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`NamespaceMemberFormDialog Icon edit user observer Renders the component 1`] = `
<fragment-stub><span><div data-test="edit-list" class="v-list-item__title">
          Edit
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="edit-icon" class="v-icon notranslate v-icon--disabled v-icon--left mdi mdi-pencil theme--light"></i></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`NamespaceMemberFormDialog Icon edit user operator Renders the component 1`] = `
<fragment-stub><span><div data-test="edit-list" class="v-list-item__title">
          Edit
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="edit-icon" class="v-icon notranslate v-icon--disabled v-icon--left mdi mdi-pencil theme--light"></i></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`NamespaceMemberFormDialog Icon edit user owner Renders the component 1`] = `
<fragment-stub><span><div data-test="edit-list" class="v-list-item__title">
          Edit
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="edit-icon" class="v-icon notranslate v-icon--left mdi mdi-pencil theme--light"></i></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;
